--- a/client/js/templates/home.html
+++ b/client/js/templates/home.html
@@ -1,1 +1,76 @@
-<h1>{{test}}</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" ng-href="/home">scenicPhoto</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a>Signup</a></li>
+        <li><a>Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="col-sm-8">
+    <img src="../../images/home.jpg" id="homeBackground">
+  </div>
+  <div class="col-sm-4">
+    <div id="rightPanel">
+      <!-- title -->
+      <h1>scenicPhoto</h1>
+
+      <!-- selling points -->
+      <div id="sellingPoints">
+        <div>Show off your photos.</div>
+        <div>Find new spots to shoot.</div>
+      </div>
+
+      <!-- signup form -->
+      <form class="form-horizontal">
+        <fieldset>
+          <legend>Sign Up</legend>
+          <div class="form-group">
+            <label class="col-md-2 control-label">Username</label>
+            <div class="col-md-10">
+              <input type="text" class="form-control" ng-model="newUser.username">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-2 control-label">Password</label>
+            <div class="col-md-10">
+              <input type="password" class="form-control" ng-model="newUser.password">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-10 col-md-offset-2">
+              <button type="submit" class="btn btn-primary">Sign up</button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+      
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
