--- a/client/js/templates/home.html
+++ b/client/js/templates/home.html
@@ -38,6 +38,12 @@
       <form class="form-horizontal" ng-show="view.showSignupForm" ng-submit="signup(newUser)">
         <fieldset>
           <legend>Sign Up</legend>
+          <!-- error alert -->
+          <div class="alert alert-warning" ng-show="view.sErrors">
+            <h4>Warning!</h4>
+            <p>{{view.sErrors.data}}</p>
+          </div>
+
           <div class="form-group">
             <label class="col-md-2 control-label">Username</label>
             <div class="col-md-10">
@@ -62,6 +68,12 @@
       <form class="form-horizontal" ng-show="view.showLoginForm" ng-submit="login(user)">
         <fieldset>
           <legend>Log In</legend>
+          <!-- error alert -->
+          <div class="alert alert-warning" ng-show="view.lErrors">
+            <h4>Warning!</h4>
+            <p>{{view.lErrors.data}}</p>
+          </div>
+
           <div class="form-group">
             <label class="col-md-2 control-label">Username</label>
             <div class="col-md-10">
