style home.html initial

--- a/client/js/templates/home.html
+++ b/client/js/templates/home.html
@@ -26,12 +26,17 @@
   <div class="col-sm-4">
     <div id="rightPanel">
       <!-- title -->
-      <h1>scenicPhoto</h1>
+      <div id="homeTitle">scenicPhoto</div>
+      <div id="hr"></div>
 
       <!-- selling points -->
       <div id="sellingPoints">
-        <div>Show off your photos.</div>
-        <div>Find new spots to shoot.</div>
+        <div id="homeWhatTitle">WHAT IS SCENICPHOTO?</div>
+        <div id="homeWhat">
+          scenicPhoto is a social network where users can show off their photos,
+          discover new spots to hike and shoot, and research different hiking spots
+          and photography equipment!
+        </div>
       </div>
 
       <!-- signup form -->
