--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -11,7 +11,18 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a>Add New Photo</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a ng-href="#">Hiker's Resource</a></li>
+            <li><a ng-href="#">Photographer's Resource</a></li>
+          </ul>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
+      <li><a>{{currentUser.username}}'s Profile</a></li>
         <li><a ng-click="logout()">Log out</a></li>
       </ul>
     </div>
