--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li><a>Add New Photo</a></li>
+        <li><a ng-click="toggleForm()">Add Photo</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -31,9 +31,9 @@
 
 <div class="container-fluid">
   <div id="photoForm">
-    <form class="form-horizontal">
+    <form class="form-horizontal" ng-show="view.showPhotoForm" ng-submit="post(newPhoto)">
       <fieldset>
-        <legend>Post New Photo</legend>
+        <legend>New Photo</legend>
         <!-- error dismissable alert -->
         <div class="alert alert-dismissble alert-warning">
           <button type="button" class="close">X</button>
