add timestamps to photos model

--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -62,4 +62,6 @@
   </div>
 </div>
 
-{{photos}}
+<div ng-repeat="photo in photos | orderBy: '-updated_at' ">
+  <div>{{photo.description}}</div>
+</div>
