--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -42,7 +42,13 @@
         <div class="form-group">
           <label class="col-md-2 control-label">Username</label>
           <div class="col-md-10">
-            <input type="text" class="form-control" ng-model="newPhoto.username" ng-init="newPhoto.username=currentUser.username">
+            <input type="text" class="form-control" ng-model="newPhoto.username">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-2 control-label">Title</label>
+          <div class="col-md-10">
+            <input type="text" class="form-control" ng-model="newPhoto.title">
           </div>
         </div>
         <div class="form-group">
@@ -67,20 +73,56 @@
   </div>
 </div>
 
-{{photos}}
-
-<br>
 <div class="container-fluid">
-  <div class="col-sm-4" ng-repeat="photo in photos">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">@{{photo.username}}</h3>
-      </div>
-      <div class="panel-body">
-        Panel content
+  <div class="col-sm-2"></div>
+
+  <div class="col-sm-8">
+    <!-- panel for photofeed -->
+    <div class="row" ng-repeat="photo in photos">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="photoTitle">{{photo.title}}</div>
+        </div>
+        <div class="panel-body">
+          <div class="col-sm-7">
+            <img ng-src="{{photo.photoUrl}}" class="photo">
+          </div>
+          <div class="col-sm-5">
+            <div class="photoUsername">@{{photo.username}}</div>
+            <div class="photoDate">{{photo.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
+            <div class="hr"></div>
+            <!-- HARD CODE FOR UI -->
+            <ul class="nav nav-pills">
+              <li class="photoLikes">
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+                Likes <span class="badge">0</span>
+              </li>
+              <li>
+                <span class="glyphicon glyphicon-heart"></span>
+                Favorites
+                <span class="badge">0</span>
+              </li>
+            </ul>
+            <div class="hr"></div>
+            <!-- END HARD CODE -->
+            <div class="photoCaption">Caption:</div>
+            <div class="photoDescription">{{photo.description}}</div>
+            <div class="hr"></div>
+            <!-- HARD CODE FOR UI -->
+            <div>
+              <button class="btn btn-success btn-sm btn-block">Like!</button>
+              <!-- <button class="btn btn-danger btn-sm btn-block">Unlike</button> -->
+              <button class="btn btn-info btn-sm btn-block">Favorite!</button>
+              <!-- <button class="btn btn-warning btn-sm btn-block">Unfavorite</button> -->
+            <!-- END HARD CODE -->
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
+  <div class="col-sm-2"></div>
 </div>
 
 
