--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -1,1 +1,31 @@
-{{test}}
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" ng-href="/home">scenicPhoto</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a>Edit Photo</a></li>
+        <li><a>See Comments</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a ng-href="#">Hiker's Resource</a></li>
+            <li><a ng-href="#">Photographer's Resource</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li><a>{{currentUser.username}}'s Profile</a></li>
+        <li><a>Log out</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
