finish prep before ui design for show page

--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -24,8 +24,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
       <li><a>{{currentUser.username}}'s Profile</a></li>
-        <li><a>Log out</a></li>
+        <li><a ng-click="logout()">Log out</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
+{{photo}}
