--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -30,4 +30,131 @@
   </div>
 </nav>
 
-{{photo}}
+<div class="container-fluid">
+  <!-- Display -->
+  <div class="col-sm-8">
+    <!-- panel for photofeed -->
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <span class="photoTitle">{{photo.title}}</span>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-7">
+            <img ng-src="{{photo.photoUrl}}" class="photo">
+          </div>
+          <div class="col-sm-5">
+            <div class="photoUsername">@{{photo.username}}</div>
+            <div class="photoDate">{{photo.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
+            <div class="hr"></div>
+            <!-- HARD CODE FOR UI -->
+            <ul class="nav nav-pills">
+              <li class="photoLikes">
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+                Likes <span class="badge">0</span>
+              </li>
+              <li>
+                <span class="glyphicon glyphicon-heart"></span>
+                Favorites
+                <span class="badge">0</span>
+              </li>
+            </ul>
+            <div class="hr"></div>
+            <!-- END HARD CODE -->
+            <div class="photoCaption">Caption:</div>
+            <div class="photoDescription">{{photo.description}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Functionality -->
+  <div class="col-sm-4">
+
+    <!-- Edit Form -->
+    <form class="form-horizontal">
+      <fieldset>
+        <legend>Edit Photo</legend>
+        <!-- error dismissable alert -->
+        <div class="alert alert-dismissble alert-warning">
+          <button type="button" class="close">X</button>
+          <div><strong>Warning!</strong> {{view.pErrors}}</div>
+        </div>
+        <div class="form-group" ng-show="false">
+          <label class="col-md-3 control-label">Username</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" ng-model="photo.username">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-3 control-label">Title</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" ng-model="photo.title">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-3 control-label">Photo Url</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" ng-model="photo.photoUrl">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-3 control-label">Description</label>
+          <div class="col-md-9">
+            <textarea class="form-control" rows="2" ng-model="photo.description"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-10 col-md-offset-3">
+            <button type="submit" class="btn btn-primary">Edit</button>
+          </div>
+        </div>
+      </fieldset>
+    </form>
+
+    <!-- panel for comments -->
+    <div class="panel panel-primary" ng-show="false">
+      <div class="panel-heading">
+        <h3 class="panel-title">Comments</h3>
+      </div>
+      <div class="panel-body">
+        <!-- HARD CODE -->
+        <table class="table table-striped table-bordered">
+          <tbody>
+            <tr>
+              <td>ekwok1: Yea!</td>
+            </tr>            
+            <tr>
+              <td>ekwok1: Yea!</td>
+            </tr>
+          </tbody>
+        </table>
+        <form action="#">
+          <div class="row">
+            <div class="col-sm-9">
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-sm-3">
+              <button class="btn btn-primary">Post</button>
+            </div>
+          </div>
+        </form>
+        <!-- END HARD CODE -->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
