--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li><a>Edit Photo</a></li>
-        <li><a>See Comments</a></li>
+        <li ng-click="toggleForm()"><a>Edit Photo</a></li>
+        <li ng-hide="view.showCommentPanel" ng-click="toggleComment()"><a>See Comments</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -72,7 +72,7 @@
   <div class="col-sm-4">
 
     <!-- Edit Form -->
-    <form class="form-horizontal">
+    <form class="form-horizontal" ng-show="view.showEditForm">
       <fieldset>
         <legend>Edit Photo</legend>
         <!-- error dismissable alert -->
@@ -113,7 +113,7 @@
     </form>
 
     <!-- panel for comments -->
-    <div class="panel panel-primary" ng-show="false">
+    <div class="panel panel-primary" ng-show="view.showCommentPanel">
       <div class="panel-heading">
         <h3 class="panel-title">Comments</h3>
       </div>
@@ -122,10 +122,10 @@
         <table class="table table-striped table-bordered">
           <tbody>
             <tr>
-              <td>ekwok1: Yea!</td>
+              <td><strong>ekwok1:</strong> Yea!</td>
             </tr>            
             <tr>
-              <td>ekwok1: Yea!</td>
+              <td><strong>ekwok1:</strong> It was really nice. What if I go off to the next line on the comment?</td>
             </tr>
           </tbody>
         </table>
