--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -36,16 +36,16 @@
     <!-- panel for photofeed -->
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <span class="photoTitle">{{photo.title}}</span>
+        <span class="photoTitle">{{editPhoto.title}}</span>
       </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-7">
-            <img ng-src="{{photo.photoUrl}}" class="photo">
+            <img ng-src="{{editPhoto.photoUrl}}" class="photo">
           </div>
           <div class="col-sm-5">
-            <div class="photoUsername">@{{photo.username}}</div>
-            <div class="photoDate">{{photo.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
+            <div class="photoUsername">@{{editPhoto.username}}</div>
+            <div class="photoDate">{{editPhoto.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
             <div class="hr"></div>
             <!-- HARD CODE FOR UI -->
             <ul class="nav nav-pills">
@@ -62,7 +62,7 @@
             <div class="hr"></div>
             <!-- END HARD CODE -->
             <div class="photoCaption">Caption:</div>
-            <div class="photoDescription">{{photo.description}}</div>
+            <div class="photoDescription">{{editPhoto.description}}</div>
           </div>
         </div>
       </div>
@@ -80,7 +80,13 @@
           <button type="button" class="close">X</button>
           <div><strong>Warning!</strong> {{view.eErrors}}</div>
         </div>
-        <div class="form-group" ng-show="false">
+        <div class="form-group" ng-show="true">
+          <label class="col-md-3 control-label">PhotoId</label>
+          <div class="col-md-9">
+            <input type="text" class="form-control" ng-model="editPhoto.id">
+          </div>
+        </div>
+        <div class="form-group" ng-show="true">
           <label class="col-md-3 control-label">Username</label>
           <div class="col-md-9">
             <input type="text" class="form-control" ng-model="editPhoto.username">
