--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -12,7 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li><a ng-click="toggleForm()">Add Photo</a></li>
+        <li><a ng-click="toggleForm()" ng-hide="view.showPhotoForm">Add Photo</a></li>
+        <li><a ng-click="toggleForm()" ng-show="view.showPhotoForm">Nevermind!</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
