--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -147,6 +147,9 @@
         <!-- HARD CODE -->
         <table class="table table-striped table-bordered">
           <tbody>
+            <tr ng-repeat="comment in comments">
+              <td>{{comment.username}}: {{comment.comment}}</td>
+            </tr>
             <tr>
               <td><strong>ekwok1:</strong> Yea!</td>
             </tr>            
