--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -144,12 +144,20 @@
         <h3 class="panel-title">Comments</h3>
       </div>
       <div class="panel-body">
-        <!-- HARD CODE -->
+        <!-- error dismissable alert -->
+        <div class="alert alert-dismissble alert-warning" ng-show="view.cErrors">
+          <button type="button" class="close" ng-click="resetAlert()">X</button>
+          <div><strong>Warning!</strong> {{view.cErrors}}</div>
+        </div>
+
+        <!-- ng-repeat for comments -->
         <table class="table table-striped table-bordered">
           <tbody>
+
             <tr ng-repeat="comment in comments">
               <td>{{comment.username}}: {{comment.comment}}</td>
             </tr>
+
             <tr>
               <td><strong>ekwok1:</strong> Yea!</td>
             </tr>            
@@ -158,17 +166,22 @@
             </tr>
           </tbody>
         </table>
-        <form action="#">
+
+        <!-- form for submitting comments -->
+        <form ng-submit="post(comment)">
+          <div class="row">
+            <input type="text" ng-model="comment.username">
+          </div>
           <div class="row">
             <div class="col-sm-9">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" ng-model="comment.comment">
             </div>
             <div class="col-sm-3">
               <button class="btn btn-primary">Post</button>
             </div>
           </div>
         </form>
-        <!-- END HARD CODE -->
+
       </div>
     </div>
   </div>
