--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -154,7 +154,7 @@
         <table class="table table-striped table-bordered">
           <tbody>
 
-            <tr ng-repeat="comment in comments">
+            <tr ng-repeat="comment in comments | orderBy: '-created_at'">
               <td>{{comment.username}}: {{comment.comment}}</td>
             </tr>
             
