--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -64,18 +64,23 @@
             <img ng-src="{{editPhoto.photoUrl}}" class="photo">
           </div>
           <div class="col-sm-5">
-            <div class="photoUsername">@{{editPhoto.username}}</div>
+            <div class="photoUsername"><em>@{{editPhoto.username}}</em></div>
             <div class="photoDate">{{editPhoto.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
             <div class="hr"></div>
             <!-- HARD CODE FOR UI -->
             <ul class="nav nav-pills">
-              <li class="photoLikes">
+              <li class="photoStats">
                 <span class="glyphicon glyphicon-thumbs-up"></span>
                 Likes <span class="badge">0</span>
               </li>
-              <li>
+              <li class="photoStats">
                 <span class="glyphicon glyphicon-heart"></span>
                 Favorites
+                <span class="badge">0</span>
+              </li>
+              <li>
+                <span class="glyphicon glyphicon-comment"></span>
+                Comments
                 <span class="badge">0</span>
               </li>
             </ul>
@@ -155,7 +160,10 @@
           <tbody>
 
             <tr ng-repeat="comment in comments | orderBy: '-created_at' track by $index">
-              <td class="col-sm-11"><strong>{{comment.username}}</strong>: {{comment.comment}}</td>
+              <td class="col-sm-11">
+                <div><strong>{{comment.username}}</strong>: {{comment.comment}}</div>
+                <div class="commentDate"><em>{{comment.created_at | date:'mediumDate'}}</em></div>
+              </td>
               <td class="col-sm-1" ng-show="canDelete(comment.username)" ng-click="deleteComment($index)">
                 <span class="glyphicon glyphicon-remove"></span>
               </td>
