add functionality to count comments on show page

--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -81,7 +81,7 @@
               <li>
                 <span class="glyphicon glyphicon-comment"></span>
                 Comments
-                <span class="badge">0</span>
+                <span class="badge">{{numComments}}</span>
               </li>
             </ul>
             <div class="hr"></div>
