--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -78,7 +78,6 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-    {{view.numComments}}
     <!-- panel for photofeed -->
     <div class="panel panel-primary" ng-repeat="photo in photos">
       <div class="panel-heading">
@@ -109,7 +108,7 @@
               <li>
                 <span class="glyphicon glyphicon-comment"></span>
                 Comments
-                <span class="badge">0</span>
+                <span class="badge">{{photo.numComments}}</span>
               </li>
             </ul>
             <div class="hr"></div>
