--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -78,6 +78,7 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
+    {{user}}
     <!-- panel for photofeed -->
     <div class="panel panel-primary" ng-repeat="photo in photos">
       <div class="panel-heading">
