--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -80,7 +80,7 @@
   <div class="col-sm-10">
     {{user}}
     <!-- panel for photofeed -->
-    <div class="panel panel-primary" ng-repeat="photo in photos">
+    <div class="panel panel-primary" ng-repeat="photo in photos track by $index">
       <div class="panel-heading">
         <a ng-href="/photos/{{photo._id}}" class="photoTitleLink"><span class="photoTitle">{{photo.title}}</span></a>
       </div>
@@ -118,13 +118,15 @@
             <div class="photoDescription">{{photo.description}}</div>
             <div class="hr"></div>
 
-            <!-- HARD CODE FOR UI -->
             <div>
-              <button class="btn btn-success btn-sm btn-block" ng-click="like(photo._id, photo)">Like!</button>
-              <!-- <button class="btn btn-danger btn-sm btn-block">Unlike</button> -->
+
+              <!-- like/dislike -->
+              <button class="btn btn-success btn-sm btn-block" ng-click="like(photo._id, photo)" ng-show="user.likedPhotos.indexOf(photo._id) === -1">Like!</button>
+              <button class="btn btn-danger btn-sm btn-block" ng-click="dislike(photo._id, photo)" ng-show="user.likedPhotos.indexOf(photo._id) !== -1">Unlike</button>
+              
+              <!-- favorite/unfavorite -->
               <button class="btn btn-info btn-sm btn-block">Favorite!</button>
-              <!-- <button class="btn btn-warning btn-sm btn-block">Unfavorite</button> -->
-            <!-- END HARD CODE -->
+              <button class="btn btn-warning btn-sm btn-block">Unfavorite</button>
 
             </div>
           </div>
