sync like counter with show page

--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -71,7 +71,7 @@
             <ul class="nav nav-pills">
               <li class="photoStats">
                 <span class="glyphicon glyphicon-thumbs-up"></span>
-                Likes <span class="badge">0</span>
+                Likes <span class="badge">{{numLikes}}</span>
               </li>
               <li class="photoStats">
                 <span class="glyphicon glyphicon-heart"></span>
