add functionality for favorite/unfavorite

--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -76,7 +76,7 @@
               <li class="photoStats">
                 <span class="glyphicon glyphicon-heart"></span>
                 Favorites
-                <span class="badge">0</span>
+                <span class="badge">{{numFavs}}</span>
               </li>
               <li>
                 <span class="glyphicon glyphicon-comment"></span>
