--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -125,8 +125,8 @@
               <button class="btn btn-danger btn-sm btn-block" ng-click="dislike(photo._id, photo)" ng-show="user.likedPhotos.indexOf(photo._id) !== -1">Unlike</button>
               
               <!-- favorite/unfavorite -->
-              <button class="btn btn-info btn-sm btn-block">Favorite!</button>
-              <button class="btn btn-warning btn-sm btn-block">Unfavorite</button>
+              <button class="btn btn-info btn-sm btn-block" ng-click="favorite(photo._id, photo)" ng-show="user.favoritePhotos.indexOf(photo._id) === -1">Save to Favorites!</button>
+              <button class="btn btn-warning btn-sm btn-block" ng-click="unfavorite(photo._id, photo)" ng-show="user.favoritePhotos.indexOf(photo._id) !== -1">Unfavorite</button>
 
             </div>
           </div>
