--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -23,7 +23,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <li><a>{{currentUser.username}}'s Profile</a></li>
+      <li><a ng-href="/users/{{currentUser.id}}">{{currentUser.username}}'s Profile</a></li>
         <li><a ng-click="logout()">Log out</a></li>
       </ul>
     </div>
