--- a/client/css/main.css
+++ b/client/css/main.css
@@ -83,9 +83,27 @@
   font-size: 85%;
 }
 
-
-
-
+/*PROFILE*/
+.profileLeft {
+  background-color: lightgrey;
+  width: 35%;
+  height: 630px;
+  margin-top: -21px;
+}
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-left: 26%;
+  margin-top: -5%;
+}
+.profileUsername {
+  text-align: center;
+  font-size: 200%;
+}
+.tableValue {
+  text-align: center;
+}
 
 
 
