add mongoose populate method in users route

--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -53,7 +53,7 @@
 <div class="container-fluid">
   <!-- Display -->
   <div class="col-sm-8">
-    <!-- panel for photofeed -->
+    <!-- panel for show page -->
     <div class="panel panel-primary">
       <div class="panel-heading">
         <span class="photoTitle">{{editPhoto.title}}</span>
