--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -29,7 +29,7 @@
 </nav>
 
 <div class="container-fluid">
-  <div class="col-sm-5">
+  <div class="col-sm-4">
     <!-- left panel -->
     <div class="leftPanel">
       <!-- username and photo -->
@@ -71,33 +71,70 @@
       <!-- follow button -->
       <table class="table button">
         <thead>
-          <th ng-show="view.showProfile"><button class="btn btn-default btn-block">Update Profile</button></th>
-          <th ng-show="view.showProfile"><button class="btn btn-default btn-block">See Personal Information</button></th>
+          <th ng-show="view.showProfile"><button class="btn btn-default btn-block" ng-click="toggleEditForm()">Update Profile</button></th>
           <th ng-show="view.showFollow"><button class="btn btn-default btn-block">Follow</button></th>
         </thead>
       </table>
     </div>
   </div>
-  <div class="col-sm-7">
+  <div class="col-sm-8">
     <!-- update personal information form -->
-    <form class="form-horizontal" ng-submit="edit(editProfile)">
+    <form class="form-horizontal" ng-show="view.showEditForm" ng-submit="edit(editProfile)">
       <fieldset>
         <legend>Update Profile</legend>
         <div class="form-group">
-          <label class="col-sm-3 control-label">Profile Picture</label>
-          <div class="col-sm-9">
+          <label class="col-sm-2 control-label">Profile Picture</label>
+          <div class="col-sm-10">
             <input type="text" class="form-control" ng-model="editProfile.profile">
           </div>
         </div>
         <div class="form-group">
-          <div class="col-lg-10 col-lg-offset-3">
+          <div class="col-lg-10 col-lg-offset-2">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </div>
       </fieldset>
     </form>
-    <!-- see personal information -->
     <!-- see my photos -->
+    {{user.photos}}
+<!--     <div class="panel panel-primary">
+      <div class="panel-heading">
+        <span class="photoTitle">{{editPhoto.title}}</span>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-7">
+            <img ng-src="{{editPhoto.photoUrl}}" class="photo">
+          </div>
+          <div class="col-sm-5">
+            <div class="photoUsername"><em>@{{editPhoto.username}}</em></div>
+            <div class="photoDate">{{editPhoto.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
+            <div class="hr"></div>
+
+            <ul class="nav nav-pills">
+              <li class="photoStats">
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+                Likes <span class="badge">{{numLikes}}</span>
+              </li>
+              <li class="photoStats">
+                <span class="glyphicon glyphicon-heart"></span>
+                Favorites
+                <span class="badge">{{numFavs}}</span>
+              </li>
+              <li>
+                <span class="glyphicon glyphicon-comment"></span>
+                Comments
+                <span class="badge">{{numComments}}</span>
+              </li>
+            </ul>
+            <div class="hr"></div>
+
+            <div class="photoCaption">Caption:</div>
+            <div class="photoDescription">{{editPhoto.description}}</div>
+          </div>
+        </div>
+      </div>
+    </div> -->
     <!-- see my followers -->
     <!-- see my following -->
     <!-- see my favorites -->
